--- a/Stock_market_cap_separation.ipynb
+++ b/Stock_market_cap_separation.ipynb
@@ -2,13 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  1.00000000e-09,   5.62341325e-09,   3.16227766e-08,\n",
+       "         1.77827941e-07,   1.00000000e-06,   5.62341325e-06,\n",
+       "         3.16227766e-05,   1.77827941e-04,   1.00000000e-03,\n",
+       "         5.62341325e-03,   3.16227766e-02,   1.77827941e-01,\n",
+       "         1.00000000e+00,   5.62341325e+00,   3.16227766e+01,\n",
+       "         1.77827941e+02,   1.00000000e+03,   5.62341325e+03,\n",
+       "         3.16227766e+04,   1.77827941e+05,   1.00000000e+06,\n",
+       "         5.62341325e+06,   3.16227766e+07,   1.77827941e+08,\n",
+       "         1.00000000e+09])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test = np.logspace(-9, 9, num=25, base=10)\n",
+    "test\n"
    ]
   },
   {
@@ -819,7 +849,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
